# MyFFmpegDemo

./: CMakeLists.txt  readme.md
10_SWScale/: CMakeLists.txt
10_SWScale/src/: main.cpp  swcale.cpp  swscale.h
11_SWResample/: CMakeLists.txt
11_SWResample/src/: main.cpp  swresample.cpp  swresample.h
1_List_Demuxers/: CMakeLists.txt
1_List_Demuxers/src/: list_demuxers.cpp  list_demuxers.h  main.cpp
2_Demuxing/: CMakeLists.txt
2_Demuxing/src/: demuxing.cpp  demuxing.h  main.cpp
3_Remuxing/: CMakeLists.txt
3_Remuxing/src/: main.cpp  remuxing.cpp  remuxing.h
4_BufferedIO/: CMakeLists.txt
4_BufferedIO/src/: bufferedIO.cpp  bufferedIO.h  main.cpp
5_RemuxingTrim/: CMakeLists.txt
5_RemuxingTrim/src/: RemuxingTrim.cpp  RemuxingTrim.h  main.cpp
6_Encode/: CMakeLists.txt
6_Encode/src/: encode.cpp  encode.h  main.cpp
7_Transcode/: CMakeLists.txt
7_Transcode/src/: formatItem.cpp  formatItem.h  main.cpp  transcode.cpp  transcode.h
8_HWDecode/: CMakeLists.txt
8_HWDecode/src/: hwdecode.cpp  hwdecode.h  main.cpp
9_HWEncode/: CMakeLists.txt
9_HWEncode/src/: hwencode.cpp  hwencode.h  main.cpp
res/: test_pic_640x360.nv12
